RESOLVED FIXED139057
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::HTMLPlugInImageElement::updateSnapshot + 108
https://bugs.webkit.org/show_bug.cgi?id=139057
Summary CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::HTMLP...
Antti Koivisto
Reported 2014-11-26 02:14:55 PST
3 com.apple.WebCore: WebCore::HTMLPlugInImageElement::updateSnapshot + 108 <== pruning: 2 com.apple.WebKit2: WebKit::PluginView::pluginSnapshotTimerFired + 233 pruning: 1 com.apple.WebKit2: WebKit::PluginView::pluginSnapshotTimerFired + 257
Attachments
patch (1.64 KB, patch)
2014-11-26 02:20 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2014-11-26 02:15:31 PST
Antti Koivisto
Comment 2 2014-11-26 02:20:22 PST
WebKit Commit Bot
Comment 3 2014-11-26 11:03:21 PST
Comment on attachment 242221 [details] patch Rejecting attachment 242221 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 242221, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... Authentication realm: <http://svn.webkit.org:80> Mac OS Forge Password for 'commit-queue@webkit.org': Authentication realm: <http://svn.webkit.org:80> Mac OS Forge Username: error: git-svn died of signal 11 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: http://webkit-queues.appspot.com/results/4747088931848192
WebKit Commit Bot
Comment 4 2014-11-27 17:39:46 PST
Comment on attachment 242221 [details] patch Clearing flags on attachment: 242221 Committed r176554: <http://trac.webkit.org/changeset/176554>
WebKit Commit Bot
Comment 5 2014-11-27 17:39:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.