CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::HTMLPlugInImageElement::updateSnapshot + 108 https://bugs.webkit.org/show_bug.cgi?id=139057

Reviewed by Anders Carlsson.

No test, don't know how to repro.

* html/HTMLPlugInImageElement.cpp:
(WebCore::HTMLPlugInImageElement::updateSnapshot): Null check the renderer.


Canonical link: https://commits.webkit.org/156933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176554 268f45cc-cd09-0410-ab3c-d52691b4dbfc